correct everything using eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
         "document": "true",
     },
     "rules" : {
+        "no-console": "off",
         "react/jsx-filename-extension" : [
             1,
             {
